Finish proj (change book info)

--- a/client/src/assets/stylesheet/home.scss
+++ b/client/src/assets/stylesheet/home.scss
@@ -1,5 +1,7 @@
+@import "./variables.scss";
+
 .home {
-  min-height: 100vh;
+  min-height: calc(100vh - #{$navbar} - 6rem);
   &-row {
     @extend .home;
   }
